Se agregaron los verbos interaction, count, layers
Se agregaron los verbos getInteractionCount, getCountByGroup,
getRasterVariables.
Los nuevos verbos se documentaron en el swagger file de la API.
Hay cambios debido al estilo de sintaxis, definido en .eslintrc.yml.
