# api/swagger/swagger.yaml
@@ -27,13 +27,13 @@ paths:
                   properties:
                     gridid:
                       type: integer
-  
+
   /getSpecie:
     get:
       description: |
         Regresa un conjunto especies filtrado por `nom_sp` o algunas si no
         existe filtro
-      parameters: 
+      parameters:
         -
           name: nom_sp
           in: query
@@ -48,12 +48,12 @@ paths:
       responses:
         "200":
           description: Success
-          schema: 
+          schema:
             type: object
-            properties: 
+            properties:
               data:
                 type: array
-                items: 
+                items:
                   type: object
                   properties:
                     nom_sp:
@@ -64,7 +64,7 @@ paths:
                       type: string
                     phylumdivisionvalido:
                       type: string
-                    clasevalida: 
+                    clasevalida:
                       type: string
                     ordenvalida:
                       type: string
@@ -77,7 +77,7 @@ paths:
           examples:
             application/json:
               data:
-                - 
+                -
                   nom_sp: Holocentrus rufus
                   spid: 53196
                   reinovalido: Animalia
@@ -87,7 +87,7 @@ paths:
                   familiavalida: Holocentridae
                   generovalido: Holocentrus
                   epitetovalido: rufus
-                - 
+                -
                   nom_sp: Molossus rufus
                   spid: 49311
                   reinovalido: Animalia
@@ -106,7 +106,7 @@ paths:
           name: payload
           in: body
           schema:
-            type: object 
+            type: object
             properties:
               nom_sp:
                 type: string
@@ -116,12 +116,12 @@ paths:
       responses:
         "200":
           description: Success
-          schema: 
+          schema:
             type: object
-            properties: 
+            properties:
               data:
                 type: array
-                items: 
+                items:
                   type: object
                   properties:
                     nom_sp:
@@ -132,7 +132,7 @@ paths:
                       type: string
                     phylumdivisionvalido:
                       type: string
-                    clasevalida: 
+                    clasevalida:
                       type: string
                     ordenvalida:
                       type: string
@@ -145,7 +145,7 @@ paths:
           examples:
             application/json:
               data:
-                - 
+                -
                   nom_sp: Holocentrus rufus
                   spid: 53196
                   reinovalido: Animalia
@@ -155,7 +155,7 @@ paths:
                   familiavalida: Holocentridae
                   generovalido: Holocentrus
                   epitetovalido: rufus
-                - 
+                -
                   nom_sp: Molossus rufus
                   spid: 49311
                   reinovalido: Animalia
@@ -184,5 +184,223 @@ paths:
                 type: array
                 items:
                   type: object
+  /getInteractionCount:
+    get:
+      description: |
+        Dado un conjunto de especies se devuelven las celdas donde están
+        presentes, al menos una de ellas, con el conteo de cuantas de ellas
+        están presentes en dicha celda. Además se devuelve un arreglo con
+        las especies presentes en dicha celda.
+      parameters:
+        -
+          name: cat_spids
+          in: query
+          required: true
+          type: array
+          items:
+            type: integer
+          collectionFormat: multi
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    gridid:
+                      type: integer
+                    spids:
+                      type: array
+                      items:
+                        type: integer
+                    count:
+                      type: integer
+    post:
+      description: |
+        Dado un conjunto de especies se devuelven las celdas donde están
+        presentes, al menos una de ellas, con el conteo de cuantas de ellas
+        están presentes en dicha celda. Además se devuelve un arreglo con
+        las especies presentes en dicha celda.
+      parameters:
+        -
+          name: cat_spids
+          in: body
+          required: true
+          schema:
+            type: array
+            items:
+              type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    gridid:
+                      type: integer
+                    spids:
+                      type: array
+                      items:
+                        type: integer
+                    count:
+                      type: integer
+  /getCountByGroup:
+    get:
+      description: |
+        Dada una pareja de categorías taxonómicas, padre e hijo, se regresa
+        el conteo de las categorías taxonómicas inferiores al hijo y su
+        nombre.
+      parameters:
+        -
+          name: field
+          in: query
+          type: string
+        -
+          name: parentfield
+          in: query
+          type: string
+        - 
+          name: parentitem
+          in: query
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    spp:
+                      type: number
+    post:
+      description: |
+        Dada una pareja de categorías taxonómicas, padre e hijo, se regresa
+        el conteo de las categorías taxonómicas inferiores al hijo y su
+        nombre.
+      parameters:
+        -
+          name: data
+          in: body
+          schema:
+            type: object
+            properties:
+              field:
+                type: string
+              parentfield:
+                type: string
+              parentitem:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    spp:
+                      type: number
+          examples:
+            application/json:
+              data:
+                - 
+                  name: Artiodactyla
+                  spp: 17
+                - 
+                  name: Carnivora
+                  spp: 45
+                - 
+                  name: Cetacea
+                  spp: 38
 
+  /getRasterVariable/{type}:
+    get:
+      description: |
+        Devuelve el nombre las capas disponibles para variables climáticas o 
+        topográficas. Dependiendo el parámetro de `type` que se le pida.
+      parameters:
+        -
+          name: type
+          in: path
+          type: string
+          required: true
+          enum: ["clima", "topo"]
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    label:
+                      type: string
+                    layer:
+                      type: string
+                    type:
+                      type: integer
+  
+  /getRasterVariable/{type}/{layer}:
+    get:
+      description: |
+        Se obtienen los datos correspondientes a la capa solicitada.
+      parameters:
+        -
+          name: type
+          in: path
+          type: string
+          required: true
+          enum: ["clima", "topo"]
+        - 
+          name: layer
+          in: path
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    tag:
+                      type: string
+                    label:
+                      type: string
+                    layer:
+                      type: string
+                    bid:
+                      type: integer
+                    type:
+                      type: integer
+                
+      
+  
           
