# controllers/verbs.js
@@ -1,13 +1,18 @@
-var pgp = require('pg-promise')();
-var moment = require('moment');
+/**
+* Verbs module
+* @module controllers/verbs
+*/
+var debug = require('debug')('verbs')
+var pgp = require('pg-promise')()
+var moment = require('moment')
 
-var config = require('../config.js');
-var queries = require('./sql/queryProvider.js');
+var config = require('../config.js')
+var queries = require('./sql/queryProvider.js')
 
-var pool = pgp(config.db);
+var pool = pgp(config.db)
 
 /**
- * Return the value of param `name` when present or `defaultValue`.
+ * Regresa el valor del parametro `name` cuando este presente o `defaultValue`.
  *
  *  - Checks body params, ex: id=12, {"id":12}
  *  - Checks query string params, ex: ?id=12
@@ -17,26 +22,20 @@ var pool = pgp(config.db);
  * the `bodyParser()` middleware.
  *
  * @param {express.Request} req
- * @param {String} name
+ * @param {string} name
  * @param {Mixed} [defaultValue]
- * @return {String}
- * 
+ * @return {string}
+ *
  */
+var getParam = function (req, name, defaultValue) {
+  var body = req.body || {}
+  var query = req.query || {}
 
-var getParam = function(req, name, defaultValue) {
-  var body = req.body || {};
-  var query = req.query || {};
+  if (body[name] != null) return body[name]
+  if (query[name] != null) return query[name]
 
-  var args = arguments.length === 2
-    ? 'req, name'
-    : 'req, name, default';
-
-  if (null != body[name]) return body[name];
-  if (null != query[name]) return query[name];
-
-  return defaultValue;
-};
-
+  return defaultValue
+}
 
 /**
  * GetGridIds de SNIB DB
@@ -48,50 +47,46 @@ var getParam = function(req, name, defaultValue) {
  * @param {express.Response} res
  *
  */
-
-exports.getGridIds = function(req, res, next) {
+exports.getGridIds = function (req, res, next) {
   pool.any(queries.grid.getIds)
-    .then(function(data){
-      res.json({'data': data});
+    .then(function (data) {
+      res.json({'data': data})
     })
-    .catch(function(error){
-      console.log(error);
-      next(error);
+    .catch(function (error) {
+      next(error)
     })
-};
-
+}
 
 /**
  * getSpeciesByName regresa la clasificación de las especies relacionadas
- * a la cadena `nom_sp`. 
+ * a la cadena `nom_sp`.
  *
- * Responde la clasificación de las especies que están relacionadas con 
+ * Responde la clasificación de las especies que están relacionadas con
  * una cadena enviada, `nom_sp`. Además se acepta el parámetro `limit`.
  *
  * @param {express.Request} req
  * @param {express.Response} res
  *
  */
-
-exports.getSpeciesByName = function(req, res, next) {
-  var specie_name = getParam(req, 'nom_sp');
-  var limit = getParam(req, 'limit', 20);
-  if (specie_name){
-    pool.any(queries.specie.getByName, {query_name: specie_name + ':*', 
+exports.getSpeciesByName = function (req, res, next) {
+  var specie_name = getParam(req, 'nom_sp')
+  var limit = getParam(req, 'limit', 20)
+  if (specie_name) {
+    pool.any(queries.specie.getByName, {query_name: specie_name + ':*',
       limit: limit})
-      .then(function(data){
-        res.json({'data': data});
+      .then(function (data) {
+        res.json({'data': data})
       })
-      .catch(function(error){
-        next(error);
+      .catch(function (error) {
+        next(error)
       })
   } else {
-  next();
+    next()
   }
-};
+}
 
 /**
- * getSpecies regresa la clasificación de un número determinado de especies. 
+ * getSpecies regresa la clasificación de un número determinado de especies.
  *
  * Responde la clasificación de un número determinado, `limit`, de especies.
  *
@@ -99,67 +94,201 @@ exports.getSpeciesByName = function(req, res, next) {
  * @param {express.Response} res
  *
  */
-
-exports.getSpecies = function(req, res, next) {
-  var limit = getParam(req, 'limit', 20);
+exports.getSpecies = function (req, res, next) {
+  var limit = getParam(req, 'limit', 20)
   pool.any(queries.specie.getAll, {limit: limit})
-    .then(function(data){
-      res.json({'data': data});
+    .then(function (data) {
+      res.json({'data': data})
     })
-    .catch(function(error){
-      next(error);
-    });
-};
+    .catch(function (error) {
+      next(error)
+    })
+}
 
 /**
  * infoSpecie regresa GeoJson con las coordenadas de las ocurrencias de la
- * especie además de información adicional sobre la información de las 
+ * especie además de información adicional sobre la información de las
  * observaciones.
  *
  * @param {express.Request} req
  * @param {express.Response} res
  *
  */
-
-exports.infoSpecie = function(req, res, next) {
-  var specie_id = req.params.specieId;
-  var fecha_incio = moment(getParam(req, 'fechaincio','1500'),
-                           ['YYYY-MM-DD', 'YYYY-MM', 'YYYY'], 'es');
+exports.infoSpecie = function (req, res, next) {
+  var specie_id = req.params.specieId
+  debug(specie_id)
+  var fecha_incio = moment(getParam(req, 'fechaincio', '1500'),
+                           ['YYYY-MM-DD', 'YYYY-MM', 'YYYY'], 'es')
   var fecha_fin = moment(getParam(req, 'fechafin', Date.now()),
-                         ['YYYY-MM-DD', 'YYYY-MM', 'YYYY'], 'es');
-  var sin_fecha = Number(getParam(req, 'sfecha', 1));
-  
+                         ['YYYY-MM-DD', 'YYYY-MM', 'YYYY'], 'es')
+  var sin_fecha = Number(getParam(req, 'sfecha', 1))
+
   pool.any(queries.specie.getInfo, {spid: specie_id})
-    .then(function(data){
-      data.map(function(e){
-        e.json_geom = JSON.parse(e.json_geom);
-        // Filtrado de fecha 
-        var fechacolecta = moment(e.fechacolecta, 
-                                  ["YYYY-MM-DD", "YYYY-MM", "YYYY"], 'es')
+    .then(function (data) {
+      data.map(function (e) {
+        e.json_geom = JSON.parse(e.json_geom)
+        // Filtrado de fecha
+        var fechacolecta = moment(e.fechacolecta,
+                                  ['YYYY-MM-DD', 'YYYY-MM', 'YYYY'], 'es')
         if (fechacolecta.isBetween(fecha_incio, fecha_fin)) {
-          e.discarded = 0;
+          e.discarded = 0
         } else if (sin_fecha && !(fechacolecta.isValid())) {
-          e.discarded = 0;
+          e.discarded = 0
         } else {
-          e.discarded = 1;
+          e.discarded = 1
         }
-      });
+      })
       res.json({'data': data})
     })
-    .catch(function(error){
-      next(error);
-    });
-};
+    .catch(function (error) {
+      next(error)
+    })
+}
 
 /**
- * getCountGridid regresa el conteo por celda de un conjunto de especies 
+ * getCountGridid regresa el conteo por celda de un conjunto de especies
  * definidas por el cliente
- * 
+ *
  * @param {express.Request} req
  * @param {express.Response} res
  *
  */
-// export getCountGridid = function(req, res, next){
-//   var speciesIdArray = getParam(req, 'spid', [])
-// 
-// };
+exports.getCountGridid = function (req, res, next) {
+  var speciesIdArray = getParam(req, 'cat_spids', [])
+
+  pool.any(queries.interaction.getCount, {spid_array: speciesIdArray})
+    .then(function (data) {
+      res.json({'data': data})
+    })
+    .catch(function (error) {
+      next(error)
+    })
+}
+
+/**
+ * getCountByGroup obtiene las especies que están relacionadas con una 
+ * categoría taxonómica seleccionada y la cadena enviada por el cliente
+ *
+ * @param {express.Request} req
+ * @param {express.Response} res
+ *
+ */
+exports.getCountByGroup = function (req, res, next) {
+  var taxonomicLevel = getParam(req, 'field', 'reinovalido')
+  var taxonomicParent = getParam(req, 'parentfield', 'dominio')
+  var taxnomicParentName = getParam(req, 'parentitem', 'Eukaryota')
+
+  pool.any(queries.snibinfo.getCountByGroup, 
+    {field: taxonomicLevel, parentfield: taxonomicParent, 
+      parentitem: taxnomicParentName})
+    .then(function (data) {
+      res.json({'data': data})
+    })
+  .catch(function (error) {
+    next(error)
+  })
+}
+
+/**
+ * getClimaLayer obtiene la infomación sobre la capa climática requerida
+ * por `layer`
+ * 
+ * @param {express.Request} req
+ * @param {express.Response} res
+ * 
+ */
+exports.getClimaLayer = function (req, res, next) {
+  var variableType = req.params.type
+  var layerName = req.params.layer
+  debug('LayerName: '+layerName)
+  debug('VariableType: '+variableType)
+  if (variableType.toUpperCase() == 'clima'.toUpperCase()){
+    if (layerName.length !== 0){
+      pool.any(queries.rasters.getClimaLayer, {layername: layerName})
+        .then(function (data) {
+          res.json({'data': data})
+        })
+        .catch(function (error) {
+          next(error)
+        })
+    } else {
+      next()
+    }
+  } else {
+    next()
+  }
+}
+
+/**
+ * getTopoLayer obtiene la infomación sobre la capa climática requerida
+ * por `layer`
+ * 
+ * @param {express.Request} req
+ * @param {express.Response} res
+ * 
+ */
+exports.getTopoLayer = function (req, res, next) {
+  var variableType = req.params.type
+  var layerName = req.params.layer
+  if (variableType.toUpperCase() == 'topo'.toUpperCase()){
+    if (layerName.length !== 0){
+      pool.any(queries.rasters.getTopoLayer, {layername: layerName})
+        .then(function (data) {
+          res.json({'data': data})
+        })
+        .catch(function (error) {
+          next(error)
+        })
+    } else {
+      next()
+    }
+  } else {
+    next()
+  }
+}
+
+/**
+ * getClimaVars obtiene las capas raster disponibles de las varaibles
+ * climaticas
+ * 
+ * @param {express.Request} req
+ * @param {express.Response} res
+ * 
+ */
+exports.getClimaVars = function (req, res, next) {
+  var variableType = req.params.type
+  if (variableType.toUpperCase() == 'clima'.toUpperCase()){
+    pool.any(queries.rasters.getClimaVariables)
+      .then(function (data) {
+        res.json({'data': data})
+      })
+      .catch(function (error) {
+        next(error)
+      })
+  } else {
+    next()
+  }
+}
+
+/**
+ * getTopoVars obtiene las capas raster disponibles de las varaibles
+ * topográficas
+ * 
+ * @param {express.Request} req
+ * @param {express.Response} res
+ * 
+ */
+exports.getTopoVars = function (req, res, next) {
+  var variableType = req.params.type
+  if (variableType.toUpperCase() == 'topo'.toUpperCase()){
+    pool.any(queries.rasters.getTopoVariables)
+      .then(function (data) {
+        res.json({'data': data})
+      })
+      .catch(function (error) {
+        next(error)
+      })
+  } else {
+    next()
+  }
+}
